<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.blebail.components</groupId>
    <artifactId>java-components</artifactId>
    <packaging>pom</packaging>
    <version>0.4-SNAPSHOT</version>
    <description>Java Components Main</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.3.4.RELEASE</version>
        <relativePath/>
    </parent>

    <properties>
        <file.encoding>UTF-8</file.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>11</java.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <gitflow-plugin.version>1.14.0</gitflow-plugin.version>
        <maven.wagon-ssh-plugin.version>3.4.1</maven.wagon-ssh-plugin.version>
        <jacoco.plugin.version>0.8.6</jacoco.plugin.version>
        <jakarta-inject.version>1.0</jakarta-inject.version>
        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
        <commons-text.version>1.9</commons-text.version>
        <commons-codec.version>1.15</commons-codec.version>
        <commons-validator.version>1.7</commons-validator.version>
        <guava.version>29.0-jre</guava.version>
        <querydsl-crud.version>0.1</querydsl-crud.version>
        <junit-jupiter.version>5.7.0</junit-jupiter.version>
        <junit-sql.version>0.1</junit-sql.version>
        <jsoup.version>1.13.1</jsoup.version>
        <imgscalr.version>4.2</imgscalr.version>
        <joda-time.version>2.10.6</joda-time.version>
        <sql.schema>${project.basedir}/src/test/resources/db/schema.sql</sql.schema>
    </properties>

    <modules>
        <module>components-core</module>
        <module>components-test</module>
        <module>components-persistence</module>
        <module>components-webservices</module>
        <module>components-thirdparty</module>
        <module>components-cms</module>
    </modules>

    <distributionManagement>
        <repository>
            <id>blebail-repository</id>
            <url>scp://blebail.com/repository/</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.blebail.components</groupId>
                <artifactId>components-test</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.components</groupId>
                <artifactId>components-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.components</groupId>
                <artifactId>components-persistence</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.components</groupId>
                <artifactId>components-webservices</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.components</groupId>
                <artifactId>components-cms</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.querydsl</groupId>
                <artifactId>querydsl-crud-sync</artifactId>
                <version>${querydsl-crud.version}</version>
            </dependency>
            <dependency>
                <groupId>com.querydsl</groupId>
                <artifactId>querydsl-sql-spring</artifactId>
                <version>${querydsl.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-validator</groupId>
                <artifactId>commons-validator</artifactId>
                <version>${commons-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>${jsoup.version}</version>
            </dependency>
            <dependency>
                <groupId>org.imgscalr</groupId>
                <artifactId>imgscalr-lib</artifactId>
                <version>${imgscalr.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-params</artifactId>
                <version>${junit-jupiter.version}</version>
            </dependency>
            <dependency>
                <groupId>com.blebail.junit</groupId>
                <artifactId>junit-sql</artifactId>
                <version>${junit-sql.version}</version>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito.version}</version>
            </dependency>
            <dependency>
                <groupId>joda-time</groupId>
                <artifactId>joda-time</artifactId>
                <version>${joda-time.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Commons -->
        <dependency>
            <groupId>jakarta.inject</groupId>
            <artifactId>jakarta.inject-api</artifactId>
            <version>${jakarta-inject.version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta-annotation.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${guava.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
    </dependencies>

    <build>
        <extensions>
            <!-- SSH -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>${maven.wagon-ssh-plugin.version}</version>
            </extension>
        </extensions>

        <plugins>
            <!-- Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>

            <!-- Java Sources -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Gitflow -->
            <plugin>
                <groupId>com.amashchenko.maven.plugin</groupId>
                <artifactId>gitflow-maven-plugin</artifactId>
                <version>${gitflow-plugin.version}</version>
                <configuration>
                    <postHotfixGoals>deploy</postHotfixGoals>
                    <postReleaseGoals>deploy</postReleaseGoals>
                </configuration>
            </plugin>

            <!-- Surefire -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

            <!-- Failsafe -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- Test reports -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
